--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -487,12 +487,14 @@ the community can benefit from them as well.},
 	howpublished = {http://webcomponents.org/articles/introduction-to-shadow-dom/}
 },
 
-@online{webcomponentscontributors????,
+@online{webcomponentscontributors2014,
 	title = {Ten Principles for Great General Purpose Web Components},
 	url = {https://github.com/basic-web-components/components-dev},
 	abstract = {This page lays out a set of principles for creating general-purpose web components that can be readily adopted in a wide range of sites and application. These principles guide the open source basic-web-components project, but anyone creating components for a wide audience may find these helpful. If you'd like to help make the web a better place, please consider applying these principles to your components.},
 	journal = {{GitHub}},
 	author = {Web Components contributors},
+	month = nov,
+	year = {2014},
 	howpublished = {https://github.com/basic-web-components/components-dev}
 },
 
@@ -573,4 +575,12 @@ the community can benefit from them as well.},
 	month = feb,
 	year = {2015},
 	howpublished = {https://divshot.com/blog/web-components/polymer-0-8-sneak-peek/}
+},
+
+@online{githubcontributors2015,
+	title = {{GitHub} Flavored Markdown},
+	url = {https://help.github.com/articles/github-flavored-markdown/},
+	author = {{GitHub} contributors},
+	year = {2015},
+	howpublished = {https://help.github.com/articles/github-flavored-markdown/}
 }
