--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -12,11 +12,11 @@ Some of these may install other dependencies in turn.
 Web Components\index{Web Components} polyfill\index{polyfill}, core library, Core Elements\index{Core Elements} and Paper Elements\index{Paper Elements}.
 \item Firebase\index{Firebase} database service and client library~\cite{firebasecontributors2015}
 \item Marked\index{Marked library} library
-\item highlight.js\index{highlight.js} library
+\item highlight.js\index{highlight.js library} library
 \item i18next\index{i18next library} library
 \item moment.js\index{moment.js library} library
-\item lodash.js\index{lodash.js} library
+\item lodash.js\index{lodash.js library} library
 \item jQuery.js\index{jQuery} library
-\item js-md5 library
-\item pvc-globals custom element
+\item js-md5 library\index{js-md5 library}
+\item pvc-globals\index{<pvc-globals>} custom element
 \end{itemize}
