--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -12,20 +12,7 @@
 @online{googledevelopers2015,
 	title = {The Awesome Power of {Auto-Binding} Templates -- Polycasts \#08},
 	url = {https://www.youtube.com/watch?v=82LfXCeuaOo},
-	abstract = {Super charge your app with Polymer data bindings.
-
-*** {CLICK} {"SHOW} {MORE"} {FOR} {LINKS} {TO} {EVERYTHING} ***
-
-Polycasts: Core Drawer Panel
-{https://www.youtube.com/watch?v=GAjpaM4HcCQ\&index=5\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN}
-
-Polycasts: Core Header Panel
-{https://www.youtube.com/watch?v=ZAc51\_0Xa\_M\&index=4\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN}
-
-Polycasts: Core Toolbar
-{https://www.youtube.com/watch?v=qDhHdi8RtwI\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN\&index=3}
-
-Tag your tweets and posts with \#polycasts and let us know what you want to see!},
+	abstract = {Super charge your app with Polymer data bindings.},
 	author = {Google Developers},
 	month = jan,
 	year = {2015},
@@ -232,7 +219,6 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	title = {The Longest {Write-Up} On ng-conf, {AngularJS} 1.3, 1.4, 1.5 {AND} 2.0 Yet},
 	url = {http://gurustop.net/newsletter/10},
 	abstract = {Hello there, This is a special issue of the {AngularJS} and Web Dev newsletter. In this issue I'll be talking only {AngularJS}, only ng-conf 2015, and specifically about the things we now know about An...},
-	journal = {{GuruStop.NET} By {@Meligy}},
 	author = {Meligy},
 	month = mar,
 	year = {2015},
